@@ -2,8 +2,9 @@ package gov.cdc.nbs.authentication;
 
 import gov.cdc.nbs.authorization.permission.Permission;
 import org.junit.jupiter.api.Test;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -11,40 +12,57 @@ class NbsUserDetailsTest {
 
   @Test
   void has_permission() {
-    NbsAuthority authority = new NbsAuthority("TestOperation", "TestObject");
 
-    NbsUserDetails userDetails = NbsUserDetails.builder()
-        .authorities(Collections.singleton(authority))
-        .build();
+    NbsUserDetails userDetails = new NbsUserDetails(
+        103L,
+        "username",
+        "first",
+        "last",
+        Set.of(new SimpleGrantedAuthority("TestOperation-TestObject")),
+        true
+    );
 
     assertThat(userDetails.hasPermission(new Permission("TestOperation", "TestObject"))).isTrue();
   }
 
   @Test
   void does_not_have_permission_for_object() {
-    NbsAuthority authority = new NbsAuthority("TestOperation", "WrongObject");
-
-
-    NbsUserDetails userDetails = NbsUserDetails.builder()
-        .authorities(Collections.singleton(authority))
-        .build();
+    NbsUserDetails userDetails = new NbsUserDetails(
+        103L,
+        "username",
+        "first",
+        "last",
+        Set.of(new SimpleGrantedAuthority("TestOperation-WrongObject")),
+        true
+    );
 
     assertThat(userDetails.hasPermission(new Permission("TestOperation", "TestObject"))).isFalse();
   }
 
   @Test
   void does_not_have_permission_for_operation() {
-    NbsAuthority authority = new NbsAuthority("WrongOperation", "TestObject");
-
-    NbsUserDetails userDetails = NbsUserDetails.builder()
-        .authorities(Collections.singleton(authority))
-        .build();
+    NbsUserDetails userDetails = new NbsUserDetails(
+        103L,
+        "username",
+        "first",
+        "last",
+        Set.of(new SimpleGrantedAuthority("WrongOperation-TestObject")),
+        true
+    );
 
     assertThat(userDetails.hasPermission(new Permission("TestOperation", "TestObject"))).isFalse();
   }
+
   @Test
   void does_not_have_permission_null() {
-    NbsUserDetails userDetails = NbsUserDetails.builder().build();
+    NbsUserDetails userDetails = new NbsUserDetails(
+        103L,
+        "username",
+        "first",
+        "last",
+        Set.of(),
+        true
+    );
 
     assertThat(userDetails.hasPermission(new Permission("TestOperation", "TestObject"))).isFalse();
   }
